[SPA-1] 프로젝트 기본 보일러 플레이트 작성 완료
- Bottom Navigation을 활용한 기본 탭 UI 작성 완료
- MVP 패턴을 위한 Activity/ Fragment, Contact, Presenter 클래스 작성 (Home, My party, Find party)
- 각 기능을 유닛 테스팅 하기위한 Test파일 작성
- 쉽게 TextView에 폰트를 적용하기위한 커스텀뷰와 라이브러리 적용
- Volley를 이용한 HttpRequest를 보내기위한 기본 세팅 완료
- BaseApplication과 Config 클래스를 이용한 애플리케이션 전역 메모리 활용 구조 작성 완료
- 기본 테스트 폰트 삽입 (나눔스퀘어)
- 각종 리소스 파일을 넣을 수 있는 res 리소스 폴더들을 생성
- 한국어, 영어, 중국어를 지원하기위한 string res 작성 완료

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.collapsed.ssuparty_android.MainActivity">
+    tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BullShit Jihoon!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
+            android:elevation="3dp">
+
+            <org.collapsed.ssuparty_android.customview.CustomFontTextView
+                android:id="@+id/main_toolbar_title_txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="16dp"
+                android:text="@string/app_name"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp"
+                app:customFont="@string/naum_square_bold" />
+        </android.support.v7.widget.Toolbar>
+
+        <org.collapsed.ssuparty_android.customview.MainViewPager
+            android:id="@+id/main_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/main_bottom_navigation"
+            android:layout_below="@id/main_toolbar"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_above="@id/main_bottom_navigation"
+            android:background="#ffeeeeee">
+
+        </LinearLayout>
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/main_bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:elevation="3dp"
+            app:itemBackground="@color/colorWhite"
+            app:itemIconTint="@color/bottom_navi_selector"
+            app:itemTextColor="@color/bottom_navi_selector"
+            app:menu="@menu/bottom_navigation">
+
+        </android.support.design.widget.BottomNavigationView>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
