--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,13 +7,27 @@
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
     <TextView
+        fontPath="fonts/NanumSquareOTFLight.otf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home Fragment"
-        fontPath="fonts/NanumSquareOTFLight.otf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/home_fetch_test_btn"
+        android:layout_width="342dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Execute fetch example."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteX="-106dp"
+        tools:layout_editor_absoluteY="505dp" />
 
 </android.support.constraint.ConstraintLayout>
