--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="85dp"
     android:orientation="horizontal"
@@ -26,7 +26,6 @@
             android:id="@+id/partyTitle"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="파티명"
             android:textSize="25dp"
             android:gravity="center"
             android:layout_margin="10dp"
@@ -36,11 +35,10 @@
             android:id="@+id/partyMember"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="파티원 수"
             android:textSize="15dp"
             android:gravity="right"
             />
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
