--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
 
+<resources>
+<string-array name="group_category">
+    <item>공모전</item>
+    <item>스터디</item>
+    <item>동아리</item>
+    <item>프로젝트</item>
+</string-array>
 </resources>
