--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,12 @@
 
 
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="groupActity_img_dp">24dp</dimen>
-    <dimen name="groupActity_img_marginTop">70dp</dimen>
-    <dimen name="groupActity_boudary_margin">30dp</dimen>
-    <dimen name="groupActity_content_width">235dp</dimen>
-    <dimen name="groupActity_content_height">45dp</dimen>
-    <dimen name="groupActity_content_marginTop">45dp</dimen>
+    <dimen name="createactivity_img_dp">24dp</dimen>
+    <dimen name="createactivity_img_marginTop">70dp</dimen>
+    <dimen name="createactivity_boudary_margin">30dp</dimen>
+    <dimen name="createactivity_content_width">235dp</dimen>
+    <dimen name="createactivity_content_height">45dp</dimen>
+    <dimen name="createactivity_content_marginTop">45dp</dimen>
 
 
 </resources>
