--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,6 +2,7 @@
 
 <resources>
 <string-array name="group_category">
+    <item>카테고리선택</item>
     <item>공모전</item>
     <item>스터디</item>
     <item>동아리</item>
