--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,9 +15,38 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
+    <style name="CreatePartyBtnTheme" parent="@android:style/Widget.Button">
+        <item name="android:layout_width">@dimen/createactivity_button_width</item>
+        <item name="android:layout_height">@dimen/createactivity_button_height</item>
+        <item name="android:layout_margin">@dimen/createactivity_button_margin</item>
+        <item name="android:textColor">#46B8FF</item>
+        <item name="android:textSize">@dimen/createactivity_content_textsize</item>
+        <item name="android:background">#00FF0000</item>
+    </style>
+
+    <style name="CreatePartyEditTextTheme" parent="@android:style/Widget.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/createactivity_content_height</item>
+        <item name="android:layout_marginTop">@dimen/createactivity_button_margin</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textColorHint">#828282</item>
+        <item name="android:textSize">@dimen/createactivity_content_textsize</item>
+    </style>
+
+    <style name="TextLabel" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">#000000</item>
+        <item name="android:textSize">25dp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">#000000</item>
+        <item name="colorControlNormal">#000000</item>
+        <item name="colorControlActivated">#000000</item>
+    </style>
+
     <declare-styleable name="CustomTextView">
         <attr name="customFont" format="string" />
     </declare-styleable>
+
 
     <style name="SSUPartyTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
